switch to packr for handling static content; other fixes
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -14,7 +14,10 @@ spec:
     spec:
       containers:
         - name: rhpam-operator
-          image: bmozaffa/rhpam-operator
+          image: docker.io/bmozaffa/rhpam-operator
+          ports:
+          - containerPort: 60000
+            name: metrics
           command:
           - rhpam-operator
           imagePullPolicy: Always
@@ -23,3 +26,5 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: OPERATOR_NAME
+              value: "rhpam-operator"
