--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ vendor/github.com
 # Temporary Build Files
 tmp/_output
 tmp/_test
-
+*-packr.go
 
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 
