--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,3 +15,7 @@
   # The version rule is used for a specific release and the master branch for in between releases.
   branch = "master"
   # version = "=v0.0.5"
+
+[[constraint]]
+  name = "github.com/gobuffalo/packr"
+  version = "v1.13.3"
