set operator-sdk version to v0.0.6 for vendoring & stability
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/trial-environment.yaml
+++ b/deploy/trial-environment.yaml
@@ -1,7 +1,7 @@
-apiVersion: "rhpam.redhat.com/v1alpha1"
-kind: "App"
+apiVersion: rhpam.redhat.com/v1alpha1
+kind: App
 metadata:
-  name: "trial-env"
+  name: trial-env
 spec:
   environment: trial-ephemeral
   console:
