--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -13,8 +13,8 @@
 [[constraint]]
   name = "github.com/operator-framework/operator-sdk"
   # The version rule is used for a specific release and the master branch for in between releases.
-  branch = "master"
-  # version = "=v0.0.5"
+  # branch = "master"
+  version = "=v0.0.6"
 
 [[constraint]]
   name = "github.com/gobuffalo/packr"
