--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,3 @@
-apiVersion: rhpam.redhat.com/v1alpha1
+apiVersion: kiegroup.org/v1
 kind: App
-projectName: rhpam-operator
+projectName: kie-cloud-operator
