--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: apps.rhpam.redhat.com
+  name: apps.kiegroup.org
 spec:
-  group: rhpam.redhat.com
+  group: kiegroup.org
   names:
     kind: App
     listKind: AppList
     plural: apps
     singular: app
   scope: Namespaced
-  version: v1alpha1
+  version: v1
