--- a/deploy/cr-authoring-ha.yaml
+++ b/deploy/cr-authoring-ha.yaml
@@ -1,17 +1,19 @@
 apiVersion: kiegroup.org/v1
 kind: App
 metadata:
-  name: trial
+  name: authoring-ha
 spec:
-  environment: trial
+  environment: authoring-ha
+  kieDeployments: 2
   objects:
     console:
+      resources:
+        limits:
+          memory: 2Gi
       env:
       - name: key1
         value: value1
     server:
       resources:
-        requests:
-          memory:
         limits:
-          memory: 1Gi
+          memory: 2Gi
