reconcile cleanup, extend cert expiration, change api version to v1
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/crs/kieapp_production.yaml
+++ b/deploy/crs/kieapp_production.yaml
@@ -1,9 +1,9 @@
-apiVersion: app.kiegroup.org/v1alpha1
+apiVersion: app.kiegroup.org/v1
 kind: KieApp
 metadata:
-  name: authoring
+  name: production
 spec:
-  environment: authoring
+  environment: production
   kieDeployments: 2
   objects:
     console:
