--- a/deploy/crs/kieapp_authoring-ha.yaml
+++ b/deploy/crs/kieapp_authoring-ha.yaml
@@ -1,9 +1,9 @@
-apiVersion: app.kiegroup.org/v1alpha1
+apiVersion: app.kiegroup.org/v1
 kind: KieApp
 metadata:
-  name: production
+  name: authoring-ha
 spec:
-  environment: production
+  environment: authoring-ha
   kieDeployments: 2
   objects:
     console:
