--- a/deploy/crs/kieapp_authoring.yaml
+++ b/deploy/crs/kieapp_authoring.yaml
@@ -1,9 +1,9 @@
-apiVersion: app.kiegroup.org/v1alpha1
+apiVersion: app.kiegroup.org/v1
 kind: KieApp
 metadata:
-  name: authoring-ha
+  name: authoring
 spec:
-  environment: authoring-ha
+  environment: authoring
   kieDeployments: 2
   objects:
     console:
