--- a/config/envs/production.yaml
+++ b/config/envs/production.yaml
@@ -11,6 +11,7 @@ console:
     - kind: ServiceAccount
       name: "{{.ApplicationName}}-rhpamsvc"
     roleRef:
+      kind: Role
       name: view
 
   deploymentConfigs:
