--- a/config/common/server.yaml
+++ b/config/common/server.yaml
@@ -3,8 +3,9 @@ persistentVolumeClaims:
   - metadata:
       name: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-postgresql-{{$index}}"
+        app: "{{.ApplicationName}}-postgresql-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-postgresql"
     spec:
       accessModes:
         - ReadWriteOnce
@@ -17,7 +18,11 @@ deploymentConfigs:
   - metadata:
       name: "{{.ApplicationName}}-kieserver-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}"
+        app: "{{.ApplicationName}}-kieserver-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-kieserver"
+      annotations:
+        template.alpha.openshift.io/wait-for-ready: "true"
     spec:
       strategy:
         type: Recreate
@@ -37,11 +42,12 @@ deploymentConfigs:
         deploymentConfig: "{{.ApplicationName}}-kieserver-{{$index}}"
       template:
         metadata:
-          name: "{{.ApplicationName}}-kieserverblh-{{$index}}"
+          name: "{{.ApplicationName}}-kieserver-{{$index}}"
           labels:
+            app: "{{.ApplicationName}}-kieserver-{{$index}}"
+            application: "{{.ApplicationName}}"
+            service: "{{.ApplicationName}}-kieserver"
             deploymentConfig: "{{.ApplicationName}}-kieserver-{{$index}}"
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-kieserver-{{$index}}"
         spec:
           serviceAccountName: "{{.ApplicationName}}-rhpamsvc"
           terminationGracePeriodSeconds: 60
@@ -49,9 +55,72 @@ deploymentConfigs:
             - name: "{{.ApplicationName}}-kieserver"
               image: "rhpam{{.Version}}-kieserver-openshift"
               imagePullPolicy: Always
+              env:
+              - name: KIE_ADMIN_USER
+                value: adminUser
+              - name: KIE_ADMIN_PWD
+                value: "{{.AdminPassword}}"
+              - name: KIE_SERVER_USER
+                value: executionUser
+              - name: KIE_SERVER_PWD
+                value: "{{.ServerPassword}}"
+              - name: DROOLS_SERVER_FILTER_CLASSES
+                value: "true"
+              - name: KIE_SERVER_CONTROLLER_USER
+                value: controllerUser
+              - name: KIE_SERVER_CONTROLLER_PWD
+                value: "{{.ControllerPassword}}"
+              - name: KIE_SERVER_CONTROLLER_SERVICE
+                value: "{{.ApplicationName}}-rhpamcentr"
+              - name: KIE_SERVER_CONTROLLER_PROTOCOL
+                value: ws
+              - name: KIE_MBEANS
+                value: enabled
+              - name: KIE_SERVER_ID
+                value: "{{.ApplicationName}}-kieserver-{{$index}}"
+              - name: MAVEN_REPOS
+                value: EXTERNAL
+              - name: SSO_OPENIDCONNECT_DEPLOYMENTS
+                value: ROOT.war
+              - name: KIE_SERVER_BYPASS_AUTH_USER
+                value: "false"
+              - name: HTTPS_KEYSTORE_DIR
+                value: "/etc/kieserver-secret-volume"
+              - name: HTTPS_KEYSTORE
+                value: "keystore.jks"
+              - name: HTTPS_NAME
+                value: "jboss"
+              - name: HTTPS_PASSWORD
+                value: "{{.KeyStorePassword}}"
+              - name: DATASOURCES
+                value: "RHPAM"
+              - name: RHPAM_DATABASE
+                value: "rhpam7"
+              - name: RHPAM_JNDI
+                value: "java:/jboss/datasources/rhpam"
+              - name: RHPAM_JTA
+                value: "true"
+              - name: KIE_SERVER_PERSISTENCE_DS
+                value: "java:/jboss/datasources/rhpam"
+              ## H2 driver settings BEGIN
+              - name: RHPAM_DRIVER
+                value: "h2"
+              - name: RHPAM_USERNAME
+                value: "sa"
+              - name: RHPAM_PASSWORD
+                value: "{{.AdminPassword}}"
+              - name: RHPAM_XA_CONNECTION_PROPERTY_URL
+                value: "jdbc:h2:/opt/eap/standalone/data/rhpam"
+              - name: RHPAM_SERVICE_HOST
+                value: "dummy_ignored"
+              - name: RHPAM_SERVICE_PORT
+                value: "12345"
+              - name: KIE_SERVER_PERSISTENCE_DIALECT
+                value: "org.hibernate.dialect.H2Dialect"
+              - name: DROOLS_SERVER_FILTER_CLASSES
+                value: "true"
+              ## H2 driver settings END
               resources:
-                requests:
-                  memory: 512Mi
                 limits:
                   memory: 1Gi
               volumeMounts:
@@ -63,7 +132,7 @@ deploymentConfigs:
                   command:
                     - "/bin/bash"
                     - "-c"
-                    - curl --fail --silent -u adminUser:"$KIE_ADMIN_PWD" http://localhost:8080/services/rest/server/healthcheck
+                    - curl --fail --silent -u "$KIE_ADMIN_USER":"$KIE_ADMIN_PWD" http://localhost:8080/services/rest/server/healthcheck
                 initialDelaySeconds: 180
                 timeoutSeconds: 2
                 periodSeconds: 15
@@ -73,7 +142,7 @@ deploymentConfigs:
                   command:
                     - "/bin/bash"
                     - "-c"
-                    - curl --fail --silent -u adminUser:"$KIE_ADMIN_PWD" http://localhost:8080/services/rest/server/readycheck
+                    - curl --fail --silent -u "$KIE_ADMIN_USER":"$KIE_ADMIN_PWD" http://localhost:8080/services/rest/server/readycheck
                 initialDelaySeconds: 60
                 timeoutSeconds: 2
                 periodSeconds: 30
@@ -88,35 +157,6 @@ deploymentConfigs:
                 - name: https
                   containerPort: 8443
                   protocol: TCP
-              env:
-              - name: KIE_ADMIN_USER
-                value: adminUser
-              - name: KIE_ADMIN_PWD
-                value: "{{.AdminPassword}}"
-              - name: KIE_SERVER_CONTROLLER_USER
-                value: controllerUser
-              - name: KIE_SERVER_CONTROLLER_PWD
-                value: "{{.ControllerPassword}}"
-              - name: KIE_SERVER_USER
-                value: executionUser
-              - name: KIE_SERVER_PWD
-                value: "{{.ServerPassword}}"
-              - name: DROOLS_SERVER_FILTER_CLASSES
-                value: "true"
-              - name: RHPAMCENTR_MAVEN_REPO_PATH
-                value: /maven2/
-              - name: KIE_SERVER_CONTROLLER_SERVICE
-                value: "{{.ApplicationName}}-rhpamcentr"
-              - name: KIE_MBEANS
-                value: enabled
-              - name: MAVEN_REPOS
-                value: RHPAMCENTR,EXTERNAL
-              - name: SSO_OPENIDCONNECT_DEPLOYMENTS
-                value: ROOT.war
-              - name: KIE_SERVER_BYPASS_AUTH_USER
-                value: "false"
-              - name: KIE_SERVER_CONTROLLER_PROTOCOL
-                value: ws
           volumes:
             - name: kieserver-keystore-volume
               secret:
@@ -126,8 +166,9 @@ deploymentConfigs:
   - metadata:
       name: "{{.ApplicationName}}-postgresql-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-postgresql-{{$index}}"
+        app: "{{.ApplicationName}}-postgresql-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-postgresql"
     spec:
       strategy:
         type: Recreate
@@ -140,7 +181,7 @@ deploymentConfigs:
             from:
               kind: ImageStreamTag
               namespace: "openshift"
-              name: "postgresql:9.6"
+              name: "postgresql:10"
         - type: ConfigChange
       replicas: 1
       selector:
@@ -149,9 +190,10 @@ deploymentConfigs:
         metadata:
           name: "{{.ApplicationName}}-postgresql-{{$index}}"
           labels:
+            app: "{{.ApplicationName}}-postgresql-{{$index}}"
+            application: "{{.ApplicationName}}"
+            service: "{{.ApplicationName}}-postgresql"
             deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-postgresql-{{$index}}"
         spec:
           terminationGracePeriodSeconds: 60
           containers:
@@ -206,8 +248,9 @@ services:
     metadata:
       name: "{{.ApplicationName}}-kieserver-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-kieserver-{{$index}}"
+        app: "{{.ApplicationName}}-kieserver-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-kieserver"
       annotations:
         description: All the KIE server web server's ports. (KIE server)
   - spec:
@@ -221,8 +264,9 @@ services:
     metadata:
       name: "{{.ApplicationName}}-kieserver-{{$index}}-ping"
       labels:
-        app: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-kieserver-{{$index}}"
+        app: "{{.ApplicationName}}-kieserver-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-kieserver"
       annotations:
         service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
         description: "The JGroups ping port for clustering."
@@ -232,8 +276,9 @@ services:
       annotations:
         description: The database server's port.
       labels:
-        application: prod
-        service: "{{.ApplicationName}}-postgresql-{{$index}}"
+        app: "{{.ApplicationName}}-postgresql-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-postgresql"
       name: "{{.ApplicationName}}-postgresql-{{$index}}"
     spec:
       ports:
@@ -248,12 +293,12 @@ routes:
     metadata:
       name: "{{.ApplicationName}}-kieserver-{{$index}}"
       labels:
-        app: "{{.ApplicationName}}"
-        service: "{{.ApplicationName}}-kieserver-{{$index}}"
+        app: "{{.ApplicationName}}-kieserver-{{$index}}"
+        application: "{{.ApplicationName}}"
+        service: "{{.ApplicationName}}-kieserver"
       annotations:
         description: Route for KIE server's https service.
     spec:
-      host: ""
       to:
         name: "{{.ApplicationName}}-kieserver-{{$index}}"
       port:
